# CS410_CourseProject

./: .env.example  .gitignore  .gitpod.yml  .pre-commit-config.yaml  INSTALLING.md  LICENSE  Makefile  README.md  docker-compose.yml  railway.toml
docs/: INSTALLING.md  (+2 more)
src/backend/: .pdm-python  Dockerfile  README.md  alembic.ini  analyze_timings.py  conftest.py  pyproject.toml  requirements.txt
src/backend/app/: initial_data.py  main.py
src/backend/app/alembic/: env.py
src/backend/app/api/: __init__.py
src/backend/app/core/: celery_app.py  config.py  log.py  security.py
src/backend/app/db/: crud.py  models.py  session.py
src/backend/data/transcripts/: 01_10-1-text-clustering-motivation.en.txt  01_11-1-text-categorization-discriminative-classifier-part-1.en.txt  01_12-1-opinion-mining-and-sentiment-analysis-latent-aspect-rating-analysis-part-1.en.txt  01_7-1-overview-text-mining-and-analytics-part-1.en.txt  01_8-1-syntagmatic-relation-discovery-entropy.en.txt  01_9-1-probabilistic-topic-models-mixture-of-unigram-language-models.en.txt  01_course-introduction-video-from-previous-semester.en.txt  01_lesson-1-1-natural-language-content-analysis.en.txt  01_lesson-2-1-vector-space-model-improved-instantiation.en.txt  01_lesson-3-1-evaluation-of-tr-systems.en.txt  01_lesson-4-1-probabilistic-retrieval-model-basic-idea.en.txt  01_lesson-5-1-feedback-in-text-retrieval.en.txt  01_lesson-6-1-learning-to-rank-part-1-optional.en.txt  02_10-2-text-clustering-generative-probabilistic-models-part-1-optional.en.txt  02_11-2-text-categorization-discriminative-classifier-part-2-optional.en.txt  02_12-2-opinion-mining-and-sentiment-analysis-latent-aspect-rating-analysis-part-2.en.txt  02_7-2-overview-text-mining-and-analytics-part-2.en.txt  02_8-2-syntagmatic-relation-discovery-conditional-entropy.en.txt  02_9-2-probabilistic-topic-models-mixture-model-estimation-part-1.en.txt  02_lesson-1-2-text-access.en.txt  02_lesson-2-2-tf-transformation.en.txt  02_lesson-3-2-evaluation-of-tr-systems-basic-measures.en.txt  02_lesson-4-2-statistical-language-model.en.txt  02_lesson-5-2-feedback-in-vector-space-model-rocchio.en.txt  02_lesson-6-2-learning-to-rank-part-2-optional.en.txt  03_10-3-text-clustering-generative-probabilistic-models-part-2-optional.en.txt  03_11-3-text-categorization-evaluation-part-1.en.txt  03_12-3-text-based-prediction.en.txt  (+69 more)
src/backend/scripts/: g4fcheck.py
(+77 files in other folders)
