[project]
name = "CourseBuddyAI"
version = "0.1.0"
description = ""
authors = [
    {name = "Avinash B.", email = "abaldeo@users.noreply.github.com"},
]
dependencies = [
    "llama-hub>=0.0.34",
    "g4f>=0.1.4.5",
    "gptcache>=0.1.42",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.1",
    "fastapi>=0.103.2",
    "uvicorn>=0.23.2",
    "alembic>=1.4.3",
    "Authlib>=0.14.3",
    "httpx>=0.15.5",
    "ipython>=7.31.1",
    "itsdangerous>=1.1.0",
    "Jinja2>=2.11.3",
    "psycopg2>=2.8.6",
    "pytest>=6.1.0",
    "requests>=2.26.0",
    "SQLAlchemy>=1.3.19",
    "passlib>=1.7.2",
    "bcrypt>=3.2.0",
    "sqlalchemy-utils>=0.36.8",
    "python-multipart>=0.0.5",
    "pyjwt>=1.7.1",
    "openai>=0.27.6",
    "python-dotenv>=1.0.0",
    "PyMuPDF>=1.23.5",
    "sentence-transformers>=2.2.2",
    "orjson>=3.9.9",
    "boto3>=1.28.72",
    "unstructured>=0.10.27",
    "upstash-redis>=0.15.0",
    "langchain-g4f @ git+https://github.com/AlexanderKorataev/langchain-gpt4free.git",
    "langchain>=0.0.325",
    "redis>=5.0.1",
    "pymilvus>=2.3.2",
    "setuptools>=68.2.2",
    "asyncpg>=0.28.0",
]
requires-python = ">=3.11,<3.12"
readme = "../../README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
 
